// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`grid header render custom class 1`] = `

<div>
  <div class="flex h-[3rem] cursor-default flex-row items-center text-sm font-medium custom-class">
    With a custom class
  </div>
</div>

`;

exports[`grid header render default 1`] = `

<div>
  <div class="flex h-[3rem] cursor-default flex-row items-center text-sm font-medium">
    Some text content
  </div>
</div>

`;
